--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0">
-  <title>MEAN</title>
+  <title>Simpson Paradox</title>
   <style type="text/css">
     /* Color Palette Based on Monokai
 
